# emboss

./: .gitignore  Cargo.toml  README.md
emboss/: Cargo.toml
emboss/src/: error.rs  extract.rs  lib.rs
emboss_common/: Cargo.toml
emboss_common/src/: lib.rs
emboss_macros/: Cargo.toml
emboss_macros/src/: lib.rs
emboss_macros/src/codegen/: const_decl.rs  exported.rs  ident.rs  mod.rs  packed.rs  static_value.rs
emboss_macros/src/internals/: mod.rs
emboss_macros/src/internals/env/: emboss_env.rs  emboss_envs.rs  mod.rs
emboss_macros/src/internals/kv/: emboss.rs  emboss_many.rs  mod.rs
emboss_macros/src/macro_impl/: mod.rs
emboss_macros/src/macro_impl/env/: emboss_env.rs  emboss_envs.rs  mod.rs
emboss_macros/src/macro_impl/kv/: emboss.rs  emboss_many.rs  mod.rs
emboss_test/: Cargo.toml  build.rs
emboss_test/src/: main.rs
src/: error.rs  lib.rs  linux_section.txt  macos_section.txt
