[package]
name = "emboss"
version = "0.1.0"
authors = ["Matt Stavola <matt@stavola.xyz>"]
edition = "2018"
description = "A small macro to embed information from the environment into your final binary"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbStavola/emboss/"

[dependencies]
